info text overflow fix

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -45,7 +45,7 @@ a {
 	animation-duration: 0.5s;
 	bottom:0;
   }
-  p {
+  .landing-text {
 	background: rgb(231, 197, 134);
 	color: black;
 	font-size: 4vmin;
@@ -63,6 +63,7 @@ a {
 	-webkit-animation-duration: 0.5s; 
 	animation-name: hoverout2;
 	animation-duration: 0.5s;
+	padding:0;
 		}
 		
 .tooltip:hover .image{
@@ -73,7 +74,7 @@ a {
 	bottom:10px;
         }
 
-.tooltip:hover p {
+.tooltip:hover .landing-text {
 	display: block;
 	opacity:1;
 	-webkit-animation-name: hover2; 
@@ -185,7 +186,9 @@ bottom:0;
 	bottom:0;
 }
 /* Nav.*/
-
+html {
+	overflow:hidden;
+}
 
 #layout {
 	display: flex;
@@ -216,7 +219,7 @@ bottom:0;
 	animation-name: entrance1;
     animation-duration: 1.1s;
 }
-// Info
+/* Info */
 html, body, #layout, #___gatsby, #gatsby-focus-wrapper {
 	height:100%;
 	overflow: hidden;
@@ -231,6 +234,8 @@ html, body, #layout, #___gatsby, #gatsby-focus-wrapper {
 }
 body {
 	background-image: none;
+	color:white;
+    font-family: "Trebuchet MS", Helvetica, sans-serif
 }
 #info {
 	flex-grow: 1;
@@ -246,20 +251,19 @@ iframe {
 	width:95%;
 	height: 95%;
 	margin:1rem;
-	border-radius: 5px;
+	border:none;
 	overflow: hidden;
 }
 
 #movingbox {
 	background-color: rgba(0, 0, 0, 100);
 	position:relative;
-	height:100%;
+	height:95%;
 	padding:1.5em;
 	text-align: justify;
 	overflow-y: scroll;
 	overflow-x: hidden;
 	border-radius: 5px;
-	//top:20%;
 	animation-name: entrance2;
 	animation-duration: 1.4s;
 	font-size: medium;
@@ -268,13 +272,14 @@ iframe {
 h1 {
 	text-align: left;
 	line-height: 10px;
-	padding-top:1em;
+	padding-top:0.5em;
 	padding-bottom:1em;
-	box-shadow:
-    inset 0 -0.175em white;
+	box-shadow: inset 0 -0.175em white;
 	background-size: 1px 1em;
 }
-
+p {
+padding-bottom : 0.5em;
+}
 @keyframes entrance1 {
 	0% {
 		right:40%;
